--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
 	<header class="header">
 		<nav class="header__nav">
+			<svg class="header__menu" width="32" height="32" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M8 12.5H40M8 24.5H40M8 36.5H40" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+			</svg>
 			<div class="header__nav__container">
 				<h5 class="nav__heading">{Yohannes <span class="nav__heading--small">molla}</span></h5>	
 				<ul class="nav__menu">
@@ -29,16 +32,14 @@
 		<section class="header__section">
 			<h2 class="header__section_heading">Hi, I'm Yohannes Molla.</h2>	
 			<h1 class="header__section_heading header__section_heading--big">I make <span class="heading__orange">beautiful</span> websites.</h1>
-
 			<button class="btn btn--larg">Hire me</button>
 			<button class="btn btn--text btn--larg">Download CV</button>
 		</section>
-
 	</header>
 
 	<main class="main">
 		<section class="main__section">
-			<img class="main__section__img" src="images/my-photo.png" alt="Yohannes Molla photo with orange background">
+			<img id="my-photo" class="main__section__img" src="images/my-photo.png" alt="Yohannes Molla photo with orange background">
 			<h2 class="main__section__heading">About me</h2>
 			<p class="main__section__para">As a college student with a passion for web design, I thrive on the creativity and precision required to make websites beautiful. With half a year of hands-on experience in front-end development, I've honed my skills in crafting visually appealing and user-friendly interfaces.</p>
 		</section>
@@ -47,7 +48,7 @@
 			<h2 class="main__section__heading">My services</h2>
 			<div class="main_section_container">
 				<section class="card">
-					<h4><span class="card__larg">P</span>ersonal front-end guider</h4>
+					<h4 class="card__heading"><span class="card__larg">P</span>ersonal front-end guider</h4>
 					<ul class="card__list">
 						<li>I've 1 year expereince fo doing front-end</li>
 						<li>I contributed to the well know framework and libraries</li>
@@ -56,7 +57,7 @@
 				</section>
 
 				<section class="card">
-					<h4><span class="card__larg">F</span>ront-end developer</h4>
+					<h4 class="card__heading"><span class="card__larg">F</span>ront-end developer</h4>
 					<ul class="card__list">
 						<li>I've 1 year expereince fo doing front-end</li>
 						<li>I contributed to the well know framework and libraries</li>
@@ -65,7 +66,7 @@
 				</section>
 
 				<section class="card">
-					<h4><span class="card__larg">U</span>X and UI designer</h4>
+					<h4 class="card__heading"><span class="card__larg">U</span>X and UI designer</h4>
 					<ul class="card__list">
 						<li>I've 1 year expereince fo doing front-end</li>
 						<li>I contributed to the well know framework and libraries</li>
@@ -75,9 +76,9 @@
 			</div>
 		</section>
 
-		<section class="main__section">
+		<section class="main__section main__section--container">
 			<h2>My recent projects</h2>
-			<p>I’ve worked in many front-end projects, here is the recent ones</p>
+			<p class="main__section__para--mb">I’ve worked in many front-end projects, here is the recent ones</p>
 			<ul class="main__section--projects">
 				<li></li>
 				<li></li>
@@ -86,13 +87,13 @@
 		</section>
 
 		<section class="main__section main__section--orange">
-			<h2>Let's engage in a discussion and explore how we can transition from our current state to fostering a familial work environment.</h2>
+			<h2 class="main__section__heading--orange">Let's engage in a discussion and explore how we can transition from our current state to fostering a familial work environment.</h2>
 
 			<button class="btn btn--text btn--larg">Let's talk</button>
 		</section>
 
 		<section class="main__section main__section--quote">
-			<img src="images/light-bulb.png" alt="light bulb as a way to indicate education can bring change">
+			<img class="main__section--quote__img" src="images/light-bulb.png" alt="light bulb as a way to indicate education can bring change">
 			<h2 class="main__section__heading--quote">Learn,teach,and repeat</h2>
 		</section>
 
@@ -110,5 +111,6 @@
 		</section>
 		<h4 class="footer__heading">Made by Yohannes Molla &copy; 2024</h4>	
 	</footer>
+	<script src="js/index.js"></script>
 </body>
 </html>
