--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 			<h2>My recent projects</h2>
 			<p class="main__section__para--mb">I’ve worked in many front-end projects, here is the recent ones</p>
 			<ul class="main__section--projects">
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><img class="main__section--projects--img" src="images/pro1.jpg" alt="prject 1"></li>
+				<li><img class="main__section--projects--img" src="images/pro2.jpg" alt="prject 1"></li>
+				<li><img class="main__section--projects--img" src="images/pro3.jpg" alt="prject 1"></li>
 			</ul>
 		</section>
 
